--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nikolam.clockapp">
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,6 +19,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver android:name="com.nikolam.data.Alarm" android:exported="true">
+            <intent-filter>
+                <action android:name="com.nikolam.START_ALARM" >
+                </action>
+            </intent-filter>
+        </receiver>
     </application>
+
+
 
 </manifest>
